--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="project-1.html" class="navigation-arrow"
+            <a href="shipyards-park-photoshoot.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
@@ -118,16 +118,18 @@
             <a href="work.html"><h6>Work Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
+            <a href="shipyards-park-photoshoot.html"
+              ><h6>Shipyards Park Photoshoot</h6></a
+            >
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
+            <a href="magazine-photoshoot.html"><h6>Magazine Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
+            <a href="excel-workbooks.html"><h6>Excel Workbooks</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+            <a href="clone-hero-charts.html"><h6>Clone Hero Charts</h6></a>
           </li>
           <li class="footer-nav-item">
             <a href="about.html"><h6>About Me</h6></a>
@@ -170,7 +172,7 @@
     </ul>
 
     <div id="myID" class="bottomMenu hide">
-      <a href="project-1.html">Previous Project</a>
+      <a href="shipyards-park-photoshoot.html">Previous Project</a>
     </div>
 
     <script type="text/javascript">
