--- a/shipyards-park-photoshoot.html
+++ b/shipyards-park-photoshoot.html
@@ -25,7 +25,7 @@
     ></script>
   </head>
 
-  <body class="project-4">
+  <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li><a href="work.html" class="custom-navigation">Work</a></li>
@@ -124,39 +124,92 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">Clone Hero Charts</h1>
+          <h1 class="project-title">Shipyards Park Photoshoot</h1>
           <p class="project-description">
-            Some Clone Hero charts I have created in the past and hopefully the
-            future. Available for download
-            <a
-              href="https://drive.google.com/drive/folders/1lU_PBNYrF1tEVhybMLXVZQ6gxbp301dU"
-              target="_blank"
-              >here</a
-            >.
+            A photoshoot done for Multimedia 111, image editing fundamentals.
+            The task was to take pictures of a tourism destination and then
+            enhance the photos in Adobe Lightroom without making them appear
+            unrealistic. Some photos were taken with imperfections to help
+            showcase touchup skills e.g. removing lense flare or correcting ISO.
           </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="project-3.html" class="navigation-arrow"
+            <a href="#" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="#" class="navigation-arrow"
+            <a href="magazine-photoshoot.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
         </ul>
       </aside>
       <main class="project-details">
-        <div class="video-container">
-          <iframe
-            width="720"
-            height="405"
-            src="https://youtube.com/embed/ZKewbI5XP_M"
-            allowfullscreen
-          >
-          </iframe>
+        <div class="project-image">
+          <img
+            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park1.jpg"
+            width="1132"
+            height="1500"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park2.jpg"
+            width="1132"
+            height="1500"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park3.jpg"
+            width="1132"
+            height="1500"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park4.jpg"
+            width="1132"
+            height="1500"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park5.jpg"
+            width="1132"
+            height="1500"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park6.jpg"
+            width="1132"
+            height="1500"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park7.jpg"
+            width="1132"
+            height="1500"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park8.jpg"
+            width="1132"
+            height="1500"
+            alt="A description of the image"
+          />
         </div>
       </main>
     </div>
@@ -186,16 +239,18 @@
             <a href="work.html"><h6>Work Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
+            <a href="shipyards-park-photoshoot.html"
+              ><h6>Shipyards Park Photoshoot</h6></a
+            >
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
+            <a href="magazine-photoshoot.html"><h6>Magazine Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
+            <a href="excel-workbooks.html"><h6>Excel Workbooks</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+            <a href="clone-hero-charts.html"><h6>Clone Hero Charts</h6></a>
           </li>
           <li class="footer-nav-item">
             <a href="about.html"><h6>About Me</h6></a>
@@ -236,12 +291,11 @@
         <p class="fineprint">&copy; 2024 Duncan Snooks.</p>
       </li>
     </ul>
-
     <div id="myID" class="bottomMenu hide">
-      <a href="project-3.html">Previous Project</a>
+      <a href="magazine-photoshoot.html">Next Project</a>
     </div>
 
-    <script type="text/javascript">
+    <script>
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
