--- a/work.html
+++ b/work.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Feb 2024 Version | Work Page
-    </title>
+    <title>Duncan Snooks Portfolio Website Work Page</title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="A page showcasing different projects created by Duncan Snooks. It includes photography, free to use excel sheets, and clone hero charts."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -138,7 +136,7 @@
                 alt="A tourism photoshoot for Shipyards Park"
               />
             </figure>
-            <a href="project-1.html">
+            <a href="shipyards-park-photoshoot.html">
               <div class="overlay">
                 <h1 class="overlay-title">Shipyards Park Photoshoot</h1>
                 <h4 class="overlay-description">
@@ -154,7 +152,7 @@
                 alt="A magazine photoshoot to showcase lighting styles"
               />
             </figure>
-            <a href="project-2.html">
+            <a href="magazine-photoshoot.html">
               <div class="overlay">
                 <h1 class="overlay-title">Magazine Photoshoot</h1>
                 <h4 class="overlay-description">
@@ -170,7 +168,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-3.html">
+            <a href="excel-workbooks.html">
               <div class="overlay">
                 <h1 class="overlay-title">Excel Workbooks</h1>
                 <h4 class="overlay-description">
@@ -186,7 +184,7 @@
                 alt="Describe your project"
               />
             </figure>
-            <a href="project-4.html">
+            <a href="clone-hero-charts.html">
               <div class="overlay">
                 <h1 class="overlay-title">Clone Hero Charts</h1>
                 <h4 class="overlay-description">
@@ -225,16 +223,18 @@
             <a href="work.html"><h6>Work Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
+            <a href="shipyards-park-photoshoot.html"
+              ><h6>Shipyards Park Photoshoot</h6></a
+            >
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
+            <a href="magazine-photoshoot.html"><h6>Magazine Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
+            <a href="excel-workbooks.html"><h6>Excel Workbooks</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+            <a href="clone-hero-charts.html"><h6>Clone Hero Charts</h6></a>
           </li>
           <li class="footer-nav-item">
             <a href="about.html"><h6>About Me</h6></a>
