--- a/about.html
+++ b/about.html
@@ -58,18 +58,37 @@
    </li>
     <li class="about-about-me"><h2>About Me</h2>
       <div>
-      <p>I'm Duncan. I was born in Whitehorse, Yukon and have lived here my whole life. I enjoy reading, listening to (and occasionally creating) music, and playing video games. I have experience in excel and I have recently taken up photography and website design and have taken classes on them at Yukon University. If you would like to reach me for either a photography or website project please send me an <a href="mailto:duncan.snooks@gmail.com" style="cursor:pointer">email</a>. Thanks for visiting my website.
+      <p>I'm Duncan. I was born in Whitehorse, Yukon and have lived here my whole life. I enjoy reading, listening to (and occasionally creating) music, and playing video games. I have experience in excel and I have recently taken up photography and website design and have taken classes on them at Yukon University. Examples of my photography and excel work can be found on the work page. If you would like to reach me for either a photography or website project please send me an <a href="mailto:duncan.snooks@gmail.com" style="cursor:pointer">email</a>. Thanks for visiting my website.
       </p>
       </div>
-      <h3>Testimonials</h3>
-      <p>&lsquo;Coding is like learning a language. When you immerse yourself in it it’s challenging at first, and gradually more and more rewarding. If you’re at all interested in the mechanics of the tools we use every day it’s well worth your time to do some hand coding, even if you don’t see yourself doing it professionally.&rsquo; — IDEA Grad 2022</p>
   </li>
   <li class="about-contact">
     <h2>Contact &amp; Social</h2>
     <ul class="socials-list">
-      <li class="social-item"><a href="#">Insta</a></li>
-      <li class="social-item"><a href="#">LinkedIn</a></li>
-      <li class="social-item"><a href="#">Behance</a></li>                
+      <li class="social-item">
+        <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
+          ><i class="fa-solid fa-envelope"></i>
+          <h6>Email</h6></a
+        >
+      </li>
+      <li class="social-item">
+        <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+          ><i class="fa-brands fa-linkedin"></i>
+          <h6>LinkedIn</h6></a
+        >
+      </li>
+      <li class="social-item">
+        <a href="https://codepen.io/duncan0714"
+          ><i class="fa-brands fa-codepen"></i>
+          <h6>Codepen</h6></a
+        >
+      </li>
+      <li class="social-item">
+        <a href="https://github.com/duncan0714"
+          ><i class="fa-brands fa-github"></i>
+          <h6>Github</h6></a
+        >
+      </li>
     </ul>
   </li>    
   <li class="about-fineprint">
