--- a/magazine-photoshoot.html
+++ b/magazine-photoshoot.html
@@ -42,7 +42,7 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">The Title Of Your Project</h1>
+          <h1 class="project-title">Magazine Photoshoot</h1>
           <p class="project-description">
             A brief description of your project goes here. The background colors
             are only to show you the <em>.project-aside</em> and
@@ -57,12 +57,12 @@
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="project-2.html" class="navigation-arrow"
+            <a href="shipyards-park-photoshoot.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="project-4.html" class="navigation-arrow"
+            <a href="excel-workbooks.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
@@ -70,20 +70,28 @@
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <a
-            href="assets/project-3/duncan-snooks-financial-tools.xlsx"
-            download
-          >
-            <img
-              src="assets/project-3/duncan-snooks-financial-tools.jpg"
-              width="1500"
-              height="704"
-              alt="A description of the image"
-            />
-          </a>
+          <img
+            src="assets/project-2/duncan-snooks-paramount.jpg"
+            width="1174"
+            height="1500"
+            alt="A description of the image"
+          />
         </div>
-        <div class="project-image-descriptor">
-          An amortization schedule for planning a large purchase
+        <div class="project-image">
+          <img
+            src="assets/project-2/duncan-snooks-rembrant.jpg"
+            width="1174"
+            height="1500"
+            alt="A description of the image"
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/project-2/duncan-snooks-split.jpg"
+            width="1174"
+            height="1500"
+            alt="A description of the image"
+          />
         </div>
       </main>
     </div>
@@ -113,16 +121,18 @@
             <a href="work.html"><h6>Work Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
+            <a href="shipyards-park-photoshoot.html"
+              ><h6>Shipyards Park Photoshoot</h6></a
+            >
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
+            <a href="magazine-photoshoot.html"><h6>Magazine Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
+            <a href="excel-workbooks.html"><h6>Excel Workbooks</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+            <a href="clone-hero-charts.html"><h6>Clone Hero Charts</h6></a>
           </li>
           <li class="footer-nav-item">
             <a href="about.html"><h6>About Me</h6></a>
@@ -164,7 +174,7 @@
       </li>
     </ul>
     <div id="myID" class="bottomMenu hide">
-      <a href="project-4.html">Next Project</a>
+      <a href="excel-workbooks.html">Next Project</a>
     </div>
 
     <script>
