--- a/project-1 slide attempt.html
+++ b/project-1 slide attempt.html
@@ -63,7 +63,7 @@
             ></a>
           </li>
           <li class="arrow">
-            <a href="project-2.html" class="navigation-arrow"
+            <a href="magazine-photoshoot.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
@@ -188,16 +188,18 @@
             <a href="work.html"><h6>Work Page</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-1.html"><h6>Shipyards Park Photoshoot</h6></a>
+            <a href="shipyards-park-photoshoot.html"
+              ><h6>Shipyards Park Photoshoot</h6></a
+            >
           </li>
           <li class="footer-nav-item">
-            <a href="project-2.html"><h6>Magazine Photoshoot</h6></a>
+            <a href="magazine-photoshoot.html"><h6>Magazine Photoshoot</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-3.html"><h6>Excel Workbooks</h6></a>
+            <a href="excel-workbooks.html"><h6>Excel Workbooks</h6></a>
           </li>
           <li class="footer-nav-item">
-            <a href="project-4.html"><h6>Clone Hero Charts</h6></a>
+            <a href="clone-hero-charts.html"><h6>Clone Hero Charts</h6></a>
           </li>
           <li class="footer-nav-item">
             <a href="about.html"><h6>About Me</h6></a>
@@ -239,7 +241,7 @@
       </li>
     </ul>
     <div id="myID" class="bottomMenu hide">
-      <a href="project-2.html">Next Project</a>
+      <a href="magazine-photoshoot.html">Next Project</a>
     </div>
 
     <script>
