--- a/project-1-slide-attempt.html
+++ b/project-1-slide-attempt.html
@@ -19,13 +19,106 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
+
+      .slide-container {
+        max-width: 1132px;
+        margin: 0 auto;
+        padding: 50px;
+      }
+
+      button {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        outline: none;
+        border: 0;
+        vertical-align: middle;
+        text-decoration: none;
+        background: transparent;
+        padding: 20px 5px;
+        color: #3c376f;
+        font-size: 2rem;
+      }
+
+      button span {
+        position: relative;
+        display: inline-block;
+        transform: translateX(0);
+        transition: transform 0.3s ease;
+      }
+
+      .previous:hover span {
+        transform: translateX(-10px) scale(1.2);
+      }
+
+      .next:hover span {
+        transform: translateX(10px) scale(1.2);
+      }
+
+      .slider-nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+      }
+
+      .slider-nav li {
+        display: flex;
+        flex: 2;
+        text-align: center;
+      }
+
+      img {
+        max-width: 100%;
+        display: none;
+        box-shadow: 10px 10px 20px 0 rgba(94, 47, 59, 0.2);
+      }
+
+      img.active {
+        display: block;
+        animation: fadeImg 0.8s;
+      }
+
+      .slider-nav .arrow {
+        flex: 0 0 15%;
+      }
+
+      .slider-nav a {
+        flex-basis: 100%;
+        display: flex;
+        align-items: center;
+      }
+
+      .slider-nav span {
+        display: block;
+        width: 100%;
+      }
+
+      @keyframes fadeImg {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+    </style>
     <script
       src="https://kit.fontawesome.com/f703662861.js"
       crossorigin="anonymous"
     ></script>
   </head>
 
-  <body class="project-4">
+  <body class="project-1">
     <header class="hero-header">
       <ul class="branding-navigation">
         <li><a href="work.html" class="custom-navigation">Work</a></li>
@@ -124,44 +217,64 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">Clone Hero Charts</h1>
+          <h1 class="project-title">The Title Of Your Project</h1>
           <p class="project-description">
-            Some Clone Hero charts I have created in the past and hopefully the
-            future. Available for download
-            <a
-              href="https://drive.google.com/drive/folders/1lU_PBNYrF1tEVhybMLXVZQ6gxbp301dU"
-              target="_blank"
-              >here</a
-            >. If you would like to try out Clone Hero, click
-            <a
-              href="https://clonehero.net/releases/v1.0.0.4080/"
-              target="_blank"
-              >here</a
-            >. It is free to download.
+            A brief description of your project goes here. The background colors
+            are only to show you the <em>.project-aside</em> and
+            <em>.project-details</em> boxes.
+          </p>
+          <p class="project-description">
+            This is a sticky sidebar (<em>.project-aside</em>) so that your
+            project title and description remain visible as you scroll down the
+            page. To remove the sticky sidebar, see
+            <em>Sidebar on Large Devices</em> in style.css.
           </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="excel-workbooks.html" class="navigation-arrow"
+            <a href="#" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="#" class="navigation-arrow"
+            <a href="magazine-photoshoot.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
         </ul>
       </aside>
       <main class="project-details">
-        <div class="video-container">
-          <iframe
-            width="720"
-            height="405"
-            src="https://youtube.com/embed/ZKewbI5XP_M"
-            allowfullscreen
-          >
-          </iframe>
+        <div class="slide-container">
+          <div class="slider">
+            <img
+              class="active"
+              src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park1.jpg"
+            />
+            <img
+              src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park2.jpg"
+            />
+            <img
+              src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park3.jpg"
+            />
+          </div>
+          <nav class="slider-nav">
+            <ul>
+              <li class="arrow">
+                <button class="previous">
+                  <span>
+                    <i class="ion-arrow-left-c"></i>
+                  </span>
+                </button>
+              </li>
+              <li class="arrow">
+                <button class="next">
+                  <span>
+                    <i class="ion-arrow-right-c"></i>
+                  </span>
+                </button>
+              </li>
+            </ul>
+          </nav>
         </div>
       </main>
     </div>
@@ -219,19 +332,21 @@
             >
           </li>
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+            <a
+              href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+              target="_blank"
               ><i class="fa-brands fa-linkedin"></i>
               <h6>LinkedIn</h6></a
             >
           </li>
           <li class="social-item">
-            <a href="https://codepen.io/duncan0714"
+            <a href="https://codepen.io/duncan0714" target="_blank"
               ><i class="fa-brands fa-codepen"></i>
               <h6>Codepen</h6></a
             >
           </li>
           <li class="social-item">
-            <a href="https://github.com/duncan0714"
+            <a href="https://github.com/duncan0714" target="_blank"
               ><i class="fa-brands fa-github"></i>
               <h6>Github</h6></a
             >
@@ -243,12 +358,11 @@
         <p class="fineprint">&copy; 2024 Duncan Snooks.</p>
       </li>
     </ul>
-
     <div id="myID" class="bottomMenu hide">
-      <a href="excel-workbooks.html">Previous Project</a>
+      <a href="magazine-photoshoot.html">Next Project</a>
     </div>
 
-    <script type="text/javascript">
+    <script>
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
@@ -261,6 +375,53 @@
       };
 
       window.addEventListener("scroll", myScrollFunc);
+    </script>
+    <script>
+      const items = document.querySelectorAll("img");
+      const itemCount = items.length;
+      const nextItem = document.querySelector(".next");
+      const previousItem = document.querySelector(".previous");
+      let count = 0;
+
+      function showNextItem() {
+        items[count].classList.remove("active");
+
+        if (count < itemCount - 1) {
+          count++;
+        } else {
+          count = 0;
+        }
+
+        items[count].classList.add("active");
+        console.log(count);
+      }
+
+      function showPreviousItem() {
+        items[count].classList.remove("active");
+
+        if (count > 0) {
+          count--;
+        } else {
+          count = itemCount - 1;
+        }
+
+        items[count].classList.add("active");
+        console.log(count);
+      }
+
+      function keyPress(e) {
+        e = e || window.event;
+
+        if (e.keyCode == "37") {
+          showPreviousItem();
+        } else if (e.keyCode == "39") {
+          showNextItem();
+        }
+      }
+
+      nextItem.addEventListener("click", showNextItem);
+      previousItem.addEventListener("click", showPreviousItem);
+      document.addEventListener("keydown", keyPress);
     </script>
   </body>
 </html>
