--- a/clone-hero-charts.html
+++ b/clone-hero-charts.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Feb 2024 Version | Project Page
-    </title>
+    <title>Duncan Snooks Portfolio Website Clone Hero Charts</title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="Clone Hero charts created by Duncan Snooks. Example tracks included in the embedded video"
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -132,12 +130,17 @@
               href="https://drive.google.com/drive/folders/1lU_PBNYrF1tEVhybMLXVZQ6gxbp301dU"
               target="_blank"
               >here</a
-            >. If you would like to try out Clone Hero, click
+            >.
+          </p>
+          <p>
+            Clone Hero is a free to play game based off of Guitar Hero. People
+            from around create and play each other's levels. If you would like
+            to try out Clone Hero, click
             <a
               href="https://clonehero.net/releases/v1.0.0.4080/"
               target="_blank"
               >here</a
-            >. It is free to download.
+            >.
           </p>
         </div>
         <ul class="project-navigation">
