--- a/shipyards-park-photoshoot.html
+++ b/shipyards-park-photoshoot.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Free Creative Portfolio Template: Feb 2024 Version | Project Page
-    </title>
+    <title>Duncan Snooks Portfolio Website Shipyards Park Photoshoot</title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="A tourism shoot of Shipyards Park located downtown in Whitehorse, Yukon. All photographs were taken and edited by Duncan Snooks"
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -131,6 +129,8 @@
             enhance the photos in Adobe Lightroom without making them appear
             unrealistic. Some photos were taken with imperfections to help
             showcase touchup skills e.g. removing lense flare or correcting ISO.
+            The original pictures are at the top and the enhanced images are
+            below.
           </p>
         </div>
         <ul class="project-navigation">
