--- a/404.html
+++ b/404.html
@@ -23,7 +23,10 @@
     <div class="error-page-wrapper">
       <div class="error-page-inner-container">
         <h1 class="error-page-title">404 File Not Found</h1>
-        <p>Create a custom error page that matches your personal brand.</p>
+        <p>
+          You have strayed from the path. Links to actual work pages can be
+          found in the footer.
+        </p>
       </div>
     </div>
     <ul class="global-footer">
