--- a/excel-workbooks.html
+++ b/excel-workbooks.html
@@ -153,6 +153,7 @@
             download
           >
             <img
+              class="project-image-content"
               src="assets/project-3/duncan-snooks-financial-tools.jpg"
               width="1500"
               height="704"
