--- a/magazine-photoshoot.html
+++ b/magazine-photoshoot.html
@@ -4,7 +4,7 @@
     <title>Duncan Snooks Portfolio Website Magazine Photoshoot</title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+      content="A collection of magazine covers shot by Duncan Snooks showcasing single light photography techniques such as split, paramount, and rembrandt."
     />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -125,7 +125,7 @@
           <h1 class="project-title">Magazine Photoshoot</h1>
           <p class="project-description">
             A magazine photoshoot for MMC 111 demonstrating the use of
-            single-light lighting techniques. I used paramount, rembrant, and
+            single-light lighting techniques. I used paramount, rembrandt, and
             split lighting to shoot the portraits. After that I brought the
             images into photoshop and enhanced the pictures, cropped out the
             model (thanks Alysha) and added in backgrounds and text.
@@ -147,6 +147,7 @@
       <main class="project-details">
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-2/duncan-snooks-paramount.jpg"
             width="1174"
             height="1500"
@@ -155,6 +156,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-2/duncan-snooks-rembrant.jpg"
             width="1174"
             height="1500"
@@ -163,6 +165,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-2/duncan-snooks-split.jpg"
             width="1174"
             height="1500"
