--- a/shipyards-park-photoshoot.html
+++ b/shipyards-park-photoshoot.html
@@ -149,6 +149,7 @@
       <main class="project-details">
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park1.jpg"
             width="1132"
             height="1500"
@@ -157,6 +158,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park2.jpg"
             width="1132"
             height="1500"
@@ -165,6 +167,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park3.jpg"
             width="1132"
             height="1500"
@@ -173,6 +176,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park4.jpg"
             width="1132"
             height="1500"
@@ -181,6 +185,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park5.jpg"
             width="1132"
             height="1500"
@@ -189,6 +194,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park6.jpg"
             width="1132"
             height="1500"
@@ -197,6 +203,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park7.jpg"
             width="1132"
             height="1500"
@@ -205,6 +212,7 @@
         </div>
         <div class="project-image">
           <img
+            class="project-image-content"
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park8.jpg"
             width="1132"
             height="1500"
