error page addtions

--- a/404.html
+++ b/404.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="icon"
+      href="assets/duncan-snooks-favicon.svg"
+      type="image/svg+xml"
+    />
     <title>Duncan Snooks Error 404 Page</title>
     <meta
       name="description"
@@ -16,6 +21,7 @@
       src="https://kit.fontawesome.com/f703662861.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/random-page.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
@@ -25,11 +31,12 @@
         <h1 class="error-page-title">404 File Not Found</h1>
         <p>
           You have strayed from the path. Links to actual work pages can be
-          found in the footer.
+          found in the footer. Or click on the button to go to a random page.
         </p>
+        <button onclick="randomPage()">Click here!</button>
       </div>
     </div>
-    <ul class="global-footer">
+    <ul class="error-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
