--- a/magazine-photoshoot.html
+++ b/magazine-photoshoot.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="icon"
+      href="assets/duncan-snooks-favicon.svg"
+      type="image/svg+xml"
+    />
     <title>Duncan Snooks Portfolio Website Magazine Photoshoot</title>
     <meta
       name="description"
