--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
                 src="assets/about/duncan-snooks-portrait-web.jpg"
                 width="1267"
                 height="1900"
-                alt="Your Photo"
+                alt="A portrait photograph of Duncan Snooks"
               />
             </div>
           </div>
