--- a/excel-workbooks.html
+++ b/excel-workbooks.html
@@ -162,7 +162,7 @@
               src="assets/project-3/duncan-snooks-financial-tools.jpg"
               width="1500"
               height="704"
-              alt="A description of the image"
+              alt="An excel spreadsheet showing an amortization schedule and an area to input the item being purchased"
             />
           </a>
         </div>
