--- a/magazine-photoshoot.html
+++ b/magazine-photoshoot.html
@@ -156,7 +156,7 @@
             src="assets/project-2/duncan-snooks-paramount.jpg"
             width="1174"
             height="1500"
-            alt="A description of the image"
+            alt="A magazine cover showcasing the paramount photography technique"
           />
         </div>
         <div class="project-image">
@@ -165,7 +165,7 @@
             src="assets/project-2/duncan-snooks-rembrant.jpg"
             width="1174"
             height="1500"
-            alt="A description of the image"
+            alt="A magazine cover showcasing the rembrandt photography technique"
           />
         </div>
         <div class="project-image">
@@ -174,7 +174,7 @@
             src="assets/project-2/duncan-snooks-split.jpg"
             width="1174"
             height="1500"
-            alt="A description of the image"
+            alt="A magazine cover showcasing the split lighting photography technique"
           />
         </div>
       </main>
