--- a/shipyards-park-photoshoot.html
+++ b/shipyards-park-photoshoot.html
@@ -158,7 +158,7 @@
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park1.jpg"
             width="1132"
             height="1500"
-            alt="A description of the image"
+            alt="The signpost for Shipyards Park in Whitehorse Yukon"
           />
         </div>
         <div class="project-image">
@@ -167,7 +167,7 @@
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park2.jpg"
             width="1132"
             height="1500"
-            alt="A description of the image"
+            alt="A car driving by a building in Shipyards Park"
           />
         </div>
         <div class="project-image">
@@ -176,7 +176,7 @@
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park3.jpg"
             width="1132"
             height="1500"
-            alt="A description of the image"
+            alt="A landscape shot including railway tracks and rolling clouds"
           />
         </div>
         <div class="project-image">
@@ -185,7 +185,7 @@
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park4.jpg"
             width="1132"
             height="1500"
-            alt="A description of the image"
+            alt="A picture of a statue in which on person comforts another"
           />
         </div>
         <div class="project-image">
@@ -194,7 +194,7 @@
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park5.jpg"
             width="1132"
             height="1500"
-            alt="A description of the image"
+            alt="Leaves reflect the glow of a lamp at night"
           />
         </div>
         <div class="project-image">
@@ -203,7 +203,7 @@
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park6.jpg"
             width="1132"
             height="1500"
-            alt="A description of the image"
+            alt="Traffic lights and headlights shine late at night"
           />
         </div>
         <div class="project-image">
@@ -212,7 +212,7 @@
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park7.jpg"
             width="1132"
             height="1500"
-            alt="A description of the image"
+            alt="A picture of a historic inn with the ISO set to high and then corrected in post"
           />
         </div>
         <div class="project-image">
@@ -221,7 +221,7 @@
             src="assets/project-1/project-1-photograph-comparison/duncan-snooks-shipyards-park8.jpg"
             width="1132"
             height="1500"
-            alt="A description of the image"
+            alt="A van driving past a hill covered in leaves with a town and clay cliffs in the background"
           />
         </div>
       </main>
