Removed unused project

--- a/clone-hero-charts.html
+++ b/clone-hero-charts.html
@@ -256,7 +256,7 @@
       <a href="excel-workbooks.html">Previous Project</a>
     </div>
 
-    <script type="text/javascript">
+    <script>
       myID = document.getElementById("myID");
 
       var myScrollFunc = function () {
