Updates for presentation

--- a/shipyards-park-photoshoot.html
+++ b/shipyards-park-photoshoot.html
@@ -280,19 +280,21 @@
             >
           </li>
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+            <a
+              href="https://www.linkedin.com/in/duncan-snooks-531017300/"
+              target="_blank"
               ><i class="fa-brands fa-linkedin"></i>
               <h6>LinkedIn</h6></a
             >
           </li>
           <li class="social-item">
-            <a href="https://codepen.io/duncan0714"
+            <a href="https://codepen.io/duncan0714" target="_blank"
               ><i class="fa-brands fa-codepen"></i>
               <h6>Codepen</h6></a
             >
           </li>
           <li class="social-item">
-            <a href="https://github.com/duncan0714"
+            <a href="https://github.com/duncan0714" target="_blank"
               ><i class="fa-brands fa-github"></i>
               <h6>Github</h6></a
             >
