--- a/about.html
+++ b/about.html
@@ -154,8 +154,9 @@
               please send me an
               <a href="mailto:duncan.snooks@gmail.com" style="cursor: pointer"
                 >email</a
-              >. I am also open to creating excel workbooks eiter for a specific
-              task or general use.
+              >
+              at duncan.snooks@gmail.com. I am also open to creating excel
+              workbooks either for a specific task or general use.
             </p>
           </div>
         </li>
@@ -185,6 +186,36 @@
                 ><i class="fa-brands fa-github"></i>
                 <h6>Github</h6></a
               >
+            </li>
+          </ul>
+        </li>
+        <li class="about-other-pages">
+          <h2>Visit Other Pages</h2>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <a href="index.html"><h6>Holding Page</h6></a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="work.html"><h6>Work Page</h6></a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="shipyards-park-photoshoot.html"
+                ><h6>Shipyards Park Photoshoot</h6></a
+              >
+            </li>
+            <li class="footer-nav-item">
+              <a href="magazine-photoshoot.html"
+                ><h6>Magazine Photoshoot</h6></a
+              >
+            </li>
+            <li class="footer-nav-item">
+              <a href="excel-workbooks.html"><h6>Excel Workbooks</h6></a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="clone-hero-charts.html"><h6>Clone Hero Charts</h6></a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="about.html"><h6>About Me</h6></a>
             </li>
           </ul>
         </li>
